--- a/style.css
+++ b/style.css
@@ -108,7 +108,7 @@ input[type="checkbox"] {
 }
 
 input:checked[type="checkbox"]{
-	background-color: #00C853;
+	background-color: ##0b8ee6;
 }
 
 input[type="checkbox"]::before{
